fix: Add ::text casts to PostgreSQL NULL parameters to prevent type inference errors